--- a/src/main/resources/README.html
+++ b/src/main/resources/README.html
@@ -16,6 +16,8 @@
         align-items: center;
         height: 100vh;
         background-image: url("./background.png");
+        background-size: cover;
+        background-repeat: no-repeat;
       }
       .container {
         background-color: rgba(255, 255, 255, 0.8);
